# flatcat

./: .copyright.tmpl  .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
distribution/docker/: Dockerfile
distribution/homebrew/: fcat.rb  flatcat.rb
distribution/redhat/: fcat.spec
examples/: json_mhost.rs  json_simple.rs  json_simple_with_hint.rs  toml_cargo.rs  toml_simple.rs  yaml_simple.rs
src/: cli_parser.rs  error.rs  file_extension.rs  format.rs  input.rs  lib.rs  output.rs
src/catter/: json.rs  mod.rs  plain.rs  toml.rs  yaml.rs
tests/: cli_output_tests.rs
tests/files/: mhost.lookup.pustina_de.json  simple.json  simple.toml  simple.yaml  text.md
tests/lit/: concat.output  help.output  json_mhost.output  json_simple-with_no_null.output  json_simple-with_no_quotes.output  json_simple-with_numbers.output  json_simple-with_value_numbers.output  json_simple.output  no_args_help.output  plain-with_end_of_line.output  plain-with_numbers.output  plain-with_value_numbers.output  plain.output  toml_cargo.output  toml_simple-with_no_quotes.output  toml_simple-with_numbers.output  toml_simple-with_value_numbers.output  toml_simple.output  yaml_simple-with_no_null.output  yaml_simple-with_no_quotes.output  yaml_simple-with_numbers.output  yaml_simple-with_value_numbers.output  yaml_simple.output
