[package]
name = "flatcat"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.de>"]
edition = "2018"
description = "Flatten nested formats into single lines with full path"

[[bin]]
name = "fcat"
path = "src/bin/fcat.rs"
doc = false

[lib]
name = "flatcat"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }
yansi = "0.5"

[dev-dependencies]
lit = "1"
spectral = "0.6"

[profile.release]
lto = true
overflow-checks = true
panic = "abort"
