[package]
name = "flatcat"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.de>"]
edition = "2018"
description = "Flatten nested file formats like JSON, TOML, YAML into single lines with full path to all values."
repository = "https://github.com/lukaspustina/flatcat.git"
homepage = "https://fcat.pustina.de"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["cat", "file", "parse", "cli"]
include = [
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGELOG.md",
    "**/*.rs",
    "Cargo.toml",
]
build = "build.rs"

[[bin]]
name = "fcat"
path = "src/bin/fcat.rs"

[lib]
name = "flatcat"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
toml = { version = "0.5", features = ["preserve_order"] }
yansi = "0.5"

[build-dependencies]
structopt = "0.3"

[dev-dependencies]
lit = "1"
spectral = "0.6"

[profile.release]
lto = true
overflow-checks = true
panic = "abort"

[package.metadata.deb]
extended-description = """flatcat
Flatten nested file formats like JSON, TOML, YAML into single lines with full path to all values.
- Supports JSON, TOML, YAML, and more format are coming.
- Support colorful output to ease readability
- Allows to ignore `Null` values
- Unrecognized file formats are printed as they are plainly
"""
section = "Utilities"
priority = "optional"
assets = [
    ["target/release/fcat", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mhost/README", "644"],
]

[package.metadata.rpm]
package = "flatcat"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
mhost = { path = "/usr/bin/fcat" }
